--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -43,17 +43,20 @@ ul li a:hover {
 
 .login {
     font-size: medium;
-    padding: 5px 15px;
-    height: 113%;
-    width: 102%;
-    background-color: rgb(5, 34, 120);
-    color: white;
+    padding: 2px 17px;
+    height: 102%;
+    width: 100%;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
     font-weight: bold;
     cursor: pointer;
     border: none;
     border-radius: 10px;
 
 
+}
+.login:hover{
+    background-color: #61bdff;
 }
 
 .logo {
@@ -130,48 +133,6 @@ ul li a:hover {
     font-weight: bold;
 }
 
-.box2 {
-    color: rgb(4, 10, 15);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: larger;
-}
-
-
-
-
-.pricelast {
-    background-color: rgba(255, 255, 255, 0.906);
-    width: 102px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-    padding: 7px 5px;
-    position: relative;
-    left: 7px;
-    top: 7px;
-    border-radius: 10px;
-    color: black;
-
-}
-
-.fa-location-dot {
-    color: rgb(19, 197, 16);
-    font-size: larger;
-}
-
-.pricen {
-    color: rgb(245, 246, 247);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: larger;
-    position: relative;
-    right: 7px;
-    top: 15px;
-}
 
 /* slider */
 
@@ -189,7 +150,6 @@ ul li a:hover {
 
 .images {
     display: flex;
-
     height: 350px;
 
 
@@ -244,22 +204,16 @@ ul li a:hover {
 }
 
 /* slider */
+/* box2 */
 
-
-
-.addplayers {
-    width: 100%;
-    border: 1px solid black;
-    background-color: rgba(91, 173, 37, 0.906);
-    font-size: 17px;
+.box2 {
+    color: rgb(4, 10, 15);
     display: flex;
-    justify-content: center;
-    padding: 10px 30px;
-    cursor: pointer;
-    border-radius: 10px;
-    box-shadow: 0 3px 10px rgb(110, 107, 124);
+    flex-direction: column;
+    align-items: center;
+    font-size: larger;
 }
-
+/* location */
 .locationinfo {
     width: 290px;
     height: 188px;
@@ -287,6 +241,11 @@ ul li a:hover {
     box-shadow: 0 10px 10px rgba(6, 6, 6, 0.73);
 
 }
+.fa-location-dot {
+    color: rgb(19, 197, 16);
+    font-size: larger;
+}
+
 
 .sportsavail {
     width: 290px;
@@ -317,11 +276,10 @@ ul li a:hover {
 
 }
 
-.cricketicon {
+.sportsicon {
     width: 35px;
 
 }
-
 .timinginfo {
     width: 200px;
 
@@ -343,6 +301,7 @@ ul li a:hover {
     border: 3px solid rgb(255, 255, 255);
 
 }
+
 
 
 .rules {
@@ -374,6 +333,23 @@ ul li a:hover {
 
 }
 
+.pricelast {
+    background-color: rgba(255, 255, 255, 0.906);
+    width: 102px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    padding: 7px 5px;
+    position: relative;
+    left: 7px;
+    top: 7px;
+    border-radius: 10px;
+    color: black;
+
+}
+
+
 .price {
     width: 190px;
     height: 60px;
@@ -398,6 +374,37 @@ ul li a:hover {
     border: 3px solid rgb(255, 255, 255);
 
 }
+
+.pricen {
+    color: rgb(245, 246, 247);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: larger;
+    position: relative;
+    right: 7px;
+    top: 15px;
+}
+
+
+.addplayers {
+    width: 100%;
+    border: 1px solid black;
+    background-color: rgba(91, 173, 37, 0.906);
+    font-size: 17px;
+    display: flex;
+    justify-content: center;
+    padding: 10px 30px;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgb(110, 107, 124);
+}
+
+
+
+
+
+
 
 .addplayer {
     width: 590px;
@@ -426,6 +433,7 @@ ul li a:hover {
 
 }
 
+/* sidebar 2 */
 .booking1 {
     width: 730px;
     height: 120vh;
@@ -475,6 +483,13 @@ ul li a:hover {
     height: 64px;
 
 
+    font-size: 20px;
+    text-align: center;
+    border-radius: 5px;
+}
+.players {
+    width: 50%;
+    height: 64px;
     font-size: 20px;
     text-align: center;
     border-radius: 5px;
@@ -536,7 +551,7 @@ input[type="date"] {
 
 }
 
-/* main2 */
+/* sidebar2 */
 
 /* footer */
 footer {
