--- a/assets/css/paymentpage.css
+++ b/assets/css/paymentpage.css
@@ -1,31 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 * {
     margin: 0px;
     padding: 0px;
 }
 
-header {
+section {
     background: linear-gradient(90deg, rgba(2, 0, 36, 1) 4%, rgba(0, 212, 255, 1) 100%);
     height: 100vh;
     background-position: center;
     background-size: cover;
     background-image: url(../../assets/images/onlinepayback.jpg);
 
-
 }
 
-/* 
-main */
+/* payment */
 .main {
     position: relative;
     top: 120px;
     left: 0px;
     padding-left: 310px;
-
-
-
-
 
 
 }
@@ -37,8 +30,7 @@ main */
     position: relative;
     left: 2%;
     bottom: 25px;
-    /* display: grid;
-    grid-template-columns: 1.5fr 3fr; */
+  
 }
 
 .payment {
@@ -70,26 +62,26 @@ main */
 
 
 }
-
+/* month */
 #mm {
     width: 50px;
     position: relative;
     right: 20px;
 }
-
+/* year */
 #yy {
     width: 50px;
     position: relative;
     left: 20px;
 }
-
+/* cvc */
 .pay3 {
     display: flex;
     flex-direction: column;
     align-items: center;
 
 }
-
+/* upi */
 .upi {
     display: flex;
     flex-direction: column;
@@ -130,7 +122,7 @@ input[type="name"]::placeholder {
 input[type="text"]::placeholder {
     padding-left: 5%;
 }
-
+/* or upi */
 .or {
     font-size: 17px;
 }
@@ -141,4 +133,4 @@ input[type="text"]::placeholder {
     bottom: 20px;
 }
 
-/* main */
+/* payment */
