--- a/assets/css/accountcreated.css
+++ b/assets/css/accountcreated.css
@@ -4,7 +4,7 @@
 }
 /* account created container */
 #container {
-    background-image: url(../../../assets/images/light.jpg);
+    background-image: url(../../assets/images/light.jpg);
     height: 100vh;
     background-position: center;
     background-size: cover;
