--- a/assets/css/registeredplayer.css
+++ b/assets/css/registeredplayer.css
@@ -5,10 +5,7 @@
 
 }
 
-body {
-    overflow-y: hidden;
 
-}
 /* header */
 header {
     background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
@@ -67,14 +64,13 @@ ul li a:hover {
 /* header */
 /* maincontainer */
 .maincontainer{
-    height: 87vh;
+    height: 77vh;
 }
 
 /* bar */
 .bar {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 92vh;
     grid-column-gap: 20px;
 }
 
@@ -83,7 +79,7 @@ ul li a:hover {
     color: white;
     margin: 10px 10px;
     border-radius: 9%;
-    height: 80vh;
+    height: 50vh;
 
 }
 
@@ -298,13 +294,14 @@ form input {
 
 .forms {
     position: relative;
-    bottom: 20px;
+    top: 90px;
     border: 2px solid rgb(180, 176, 176);
     width: 450px;
     left: 35%;
     border-radius: 2%;
     box-shadow: 0 10px 10px rgba(215, 211, 211, 0.230);
     height: 530px;
+
 
 }
 
@@ -378,4 +375,211 @@ form input {
     width: 70px;
     position: relative;
     bottom: 300px;
+    left: 530px;
+   
 }
+.two-sides {
+    display: grid;
+    grid-template-columns: 5fr 1fr;
+    grid-template-rows: 92vh;
+    grid-column-gap: 10px;
+    height: 110vh;
+}
+
+.ground-info-1 {
+    background-color: rgba(255, 255, 255, 0.2);
+    color: rgb(0, 0, 0);
+    margin: 10px 10px;
+ 
+    height: 1vh;
+    display: flex;
+    flex-direction: column;
+  align-items: center;
+
+
+}
+
+.child {
+
+    width: 35%;
+    height: 350px;
+    border-radius: 4%;
+    box-shadow: 0 3px 10px rgb(3, 10, 87);
+    margin-left: 13%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+    background-color: white;
+    color: black;
+
+}
+
+.child:hover {
+   
+    border: 3px solid rgb(2, 3, 14);
+        
+}
+/* groundimage */
+.groimg {
+    width: 70%;
+    border: 2px solid transparent;
+    border-image: linear-gradient(90deg, rgb(11, 11, 11) 4%, rgb(14, 16, 16) 100%)60;
+    color: rgb(12, 10, 10);
+    margin-left: 59px;
+ 
+}
+/* groundname */
+
+.groundn {
+    color: rgb(6, 4, 4);
+    font-size: 15px;
+    font-weight: bolder;
+    text-align: center;
+
+}
+/* locationname */
+
+.locationn {
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    font-weight: bolder;
+    text-align: center;
+}
+/* sportsicon */
+.sportsicon {
+    width: 25px;
+}
+
+
+.symbol {
+    display: flex;
+    flex-direction: column;
+    flex-direction: row;
+    position: relative;
+    right: 33%;
+    bottom: 2%;
+    align-content: space-around;
+    align-items: flex-end;
+
+}
+
+.ratings {
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+    left: 38%;
+    bottom: 8%;
+
+}
+/* book button */
+.book {
+    font-size: medium;
+    padding: 2px 10px;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(5, 120, 105);
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    position: relative;
+    top: 30px;
+    border-radius: 10%;
+
+}
+
+.fa-star {
+    color: rgb(255, 183, 0);
+    font-size: 17px;
+    position: relative;
+    right: 10px;
+
+}
+
+.ratingno {
+    position: relative;
+    font-size: 130%;
+    font-weight: bold;
+    bottom: 3px;
+    color: rgb(0, 0, 0);
+}
+a{
+    text-decoration: none;
+}
+
+.bookhistory{
+    position: relative;
+    left: 75px;
+}
+.bookdate{
+    position: relative;
+    left: 75px;
+    font-weight: 600;
+}
+/* footer section */
+footer {
+    height: 30vh;
+    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+
+    background-size: cover;
+    color: white;
+
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+
+.foot-heading {
+    color: rgb(219, 213, 213);
+    font-size: larger;
+    font-weight: bold;
+
+}
+
+.column1 {
+    margin-top: 2%;
+}
+
+p {
+    list-style-type: none;
+}
+
+p a {
+    text-decoration: none;
+    font-size: medium;
+    color: rgb(219, 213, 213);
+    line-height: 1.6;
+}
+
+.fa-brands {
+    font-size: x-large;
+    padding: 1.5%;
+}
+
+.fa-facebook {
+    color: #3b5998;
+}
+
+.fa-twitter {
+    color: #00acee;
+
+}
+.fa-instagram{
+    color: rgb(167, 8, 95);
+}
+
+.fa-linkedin {
+    color: #0A66C2;
+
+}
+
+a {
+    text-decoration: none;
+}
+
+/* footer section */
