--- a/assets/css/findplayers.css
+++ b/assets/css/findplayers.css
@@ -1,9 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 *{
     margin:0px;
     padding:0px;
    
 
+}
+body{
+    overflow-x: hidden;
 }
 /* header */
 header{
