--- a/assets/css/playerprofile.css
+++ b/assets/css/playerprofile.css
@@ -27,6 +27,18 @@ ul {
     left: 70px;
 
 }
+.checkbtn{
+    font-size: 22px;
+    color: rgb(255, 255, 255);
+    float: right;
+    margin-right: 15px;
+    cursor: pointer;
+    display: none;
+
+}
+#check{
+    display: none;
+}
 
 ul li {
     list-style-type: none;
@@ -460,3 +472,504 @@ a {
 }
 
 /* footer section */
+@media screen and (max-width:900px){
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+* {
+    margin: 0px;
+    padding: 0px;
+    /* overflow: hidden; */
+}
+
+
+
+header {
+    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+width: 785px;
+    height: 20vh;
+    background-position: center;
+    background-size: cover;
+
+
+}
+
+ul {
+    display: flex;
+    justify-content: end;
+    margin-right: 2%;
+    position: relative;
+    left: -100%;
+    width: 70px;
+    display: inline-block;
+    transition: all 0.5s;
+    z-index: 5;
+}
+.checkbtn{
+    font-size: 30px;
+    color: rgb(255, 255, 255);
+    float: right;
+    margin-right: 15px;
+    cursor: pointer;
+    display: block;
+
+
+}
+#check{
+    display: none;
+}
+ul li {
+    list-style-type: none;
+    padding: 2%;
+    background-color: #d0dae3;
+}
+
+ul li a {
+    text-decoration: none;
+    text-decoration: none;
+    font-size: 10px;
+    color: #00021a;
+
+}
+
+ul li a:hover {
+    color: rgb(130, 217, 235);
+
+}
+#check:checked ~ul{
+    position: relative;
+    left: 90%;
+   }
+
+.login {
+    font-size: medium;
+    padding: 5px 15px;
+    height: 113%;
+    width: 102%;
+    background-color: rgb(5, 34, 120);
+    color: white;
+    position: relative;
+    bottom: 95px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+
+
+}
+
+.logo {
+    width: 30%;
+    position: relative;
+    top:10px;
+    left: 156px;
+}
+
+
+#main1 {
+    height: 5vh;
+
+}
+
+.cont1 {
+    text-align: center;
+    font-size: 22px;
+    font-weight: bolder;
+    position: relative;
+    bottom: 90px;
+    color: white;
+    white-space: nowrap;
+}
+
+.cont2 {
+    background-color: rgb(2, 2, 45);
+    border: 5px solid rgb(25, 11, 82);
+    border-radius: 10%;
+    width: 90px;
+    height:90px ;
+    max-height: 90px;
+    box-shadow: 0 10px 10px rgba(14, 1, 1, 0.23);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 80%;
+    position: relative;
+    bottom: 50px;
+
+
+
+}
+
+.userlogo {
+    width: 38px;
+    position: relative;
+    bottom: 10px;
+
+}
+.userbar{
+    position: relative;
+    bottom: 15px;
+}
+
+
+
+
+
+.fa-user {
+    font-size: xx-large;
+    margin-top: 5px;
+    color: white;
+
+}
+
+.userprofile {
+    font-size: 13px;
+    padding: 2px 2px;
+    background-color: rgb(5, 120, 47);
+    color: white;
+    font-weight: 600;
+    cursor: pointer;
+    border: none;
+    position: relative;
+     bottom: 332px;
+    border-radius: 3px;
+
+
+
+}
+
+.cricketicon {
+    width: 30px;
+}
+
+.fa-star {
+    color: rgb(255, 183, 0);
+    font-size: 17px;
+    position: relative;
+    right: 10px;
+
+}
+
+.main2 {
+    height: 200vh;
+
+
+
+}
+
+.bar {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 87vh;
+    grid-column-gap: 20px;
+    height: 99vh;
+}
+
+.sidebar1 {
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
+    margin: 30px 10px;
+    border-radius: 9%;
+    height: 59vh;
+  
+
+}
+
+.sidebar2 {
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
+    margin: 10px 10px;
+    border-radius: 0%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 170px;
+    
+
+}
+
+.box1 {
+
+    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+
+    border: 1px solid rgb(25, 11, 82);
+    border-radius: 10%;
+    width: 100%;
+    height: 490px;
+    box-shadow: 0 10px 10px rgba(14, 1, 1, 0.23);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 42%;
+
+    position: relative;
+    top: 20px;
+
+
+
+
+}
+
+.playerinfo {
+    color: black;
+    width: 200px;
+    background-color: rgb(208, 216, 216);
+    padding: 10px 20px;
+    position: relative;
+    bottom: 50px;
+    font-size: larger;
+    
+}
+
+.profilepic {
+    width: 170px;
+    position: relative;
+    top: 30px;
+}
+
+
+
+
+.profile {
+    font-size: medium;
+    padding: 9px 20px;
+    color: rgb(20, 14, 14);
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    margin-bottom: 5px;
+    position: relative;
+    top: 30px;
+    box-shadow: 0 3px 10px rgb(3, 10, 87);
+
+}
+.ratings {
+    display: flex;
+    position: relative;
+    left: 38%;
+    bottom: 7%;
+}
+
+.sports {
+    position: relative;
+    right: 30%;
+
+}
+
+.cont {
+    color: black;
+    font-size: x-large;
+}
+
+.connect {
+    font-size: medium;
+    padding: 9px 20px;
+    color: rgb(20, 24, 21);
+    background-color: green;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    position: relative;
+    bottom: 50px;
+
+
+
+}
+/* sidebar2 */
+.container {
+    background-color: rgba(15, 67, 209, 0.82);
+    width: 390px;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20%;
+    border-radius: px;
+    border: 1px solid black;
+    box-shadow: 0 3px 10px rgb(0, 0, 0);
+    position: relative;
+    bottom: 90px;
+    left: 160px;
+    margin-bottom: 20px;
+}
+
+.top {
+    color: rgb(255, 255, 255);
+    padding: 2%;
+}
+
+.main {
+    flex: 1;
+    color: rgb(0, 0, 0);
+    background-color: rgba(229, 233, 236, 0.952);
+    padding: 20px 10px;
+
+}
+
+.messageto {
+    background-color: rgb(248, 248, 248);
+    color: black;
+    width: 10%;
+    padding: 7px 15px;
+    margin-left: 13px;
+    border-radius: 35%;
+    box-shadow: 0 3px 10px rgba(240, 238, 238, 0.626);
+}
+
+.messagefrom {
+    background-color: rgb(126, 126, 126);
+    color: rgb(255, 255, 255);
+    width: 10%;
+    padding: 7px 15px;
+    margin-left: 78%;
+    border-radius: 35%;
+    box-shadow: 0 3px 10px rgba(240, 238, 238, 0.626);
+}
+
+.bottom form {
+    display: flex;
+    background-color: rgba(229, 233, 236, 0.952);
+
+}
+
+form input {
+    width: 320px;
+    height: 27px;
+    border: 1px solid black;
+    padding-left: 7px;
+    outline: none;
+    border-radius: 0px;
+
+}
+
+form button {
+    width: 16%;
+    background-color: rgb(27, 238, 146);
+    font-size: medium;
+    border: none;
+    outline: none;
+    border-radius: 0px;
+}
+
+
+
+
+.rightarrow {
+    width: 90px;
+    position: relative;
+    left: 700px;
+    bottom: 500px;
+    display: none;
+}
+
+/* dropdown */
+.staticsreport {
+    color: black;
+    position: relative;
+    left: 17px;
+}
+
+.dropdownstatistics {
+    position: relative;
+    left: 320px;
+}
+
+.statisticsbtn {
+    padding: 10px 20px;
+    background-color: #07172c;
+    color: white;
+    cursor: pointer;
+    border: none;
+}
+
+.dropdownlist {
+
+    color: black;
+    background-color: rgb(189, 195, 208);
+    width: 210px;
+    height: 170px;
+    position: relative;
+    right: 50px;
+    display: none;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: left;
+    border-radius: 5px;
+}
+
+.dropdownlist p:hover {
+    background-color: rgb(240, 252, 255);
+       width: 180px;
+}
+
+.dropdownstatistics:hover .dropdownlist {
+    display: block;
+}
+
+/* footer section */
+footer {
+    height: 30vh;
+    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+    width: 785px;
+    background-size: cover;
+    color: white;
+
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+
+.foot-heading {
+    color: rgb(219, 213, 213);
+    font-size: larger;
+    font-weight: bold;
+
+}
+
+.column1 {
+    margin-top: 2%;
+}
+
+p {
+    list-style-type: none;
+  
+}
+
+p a {
+    text-decoration: none;
+    font-size: medium;
+    color: rgb(219, 213, 213);
+    line-height: 1.6;
+}
+
+.fa-brands {
+    font-size: x-large;
+    padding: 1.5%;
+}
+
+.fa-facebook {
+    color: #3b5998;
+}
+
+.fa-twitter {
+    color: #00acee;
+
+}
+.fa-instagram{
+    color: rgb(167, 8, 95);
+}
+
+.fa-linkedin {
+    color: #0A66C2;
+
+}
+
+a {
+    text-decoration: none;
+}
+
+/* footer section */
+
+}
