--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -652,7 +652,7 @@ a {
     /* header */
     header {
         height: 10vh;
-        width: 700px;
+        width: 427px;
         background-position: center;
         background-size: cover;
         background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
@@ -690,8 +690,8 @@ a {
         padding: 2%;
         position: relative;
         background-color: #d0dae3;
-        bottom: 0px;
-        width: 130px;
+        top: 50px;
+        width: 90px;
     
     }
     
@@ -729,20 +729,20 @@ a {
     }
     
     .logo {
-        width: 27%;
+        width: 37%;
         position: relative;
         bottom: 99px;
-        left: 156px;
+        left: 56px;
     }
     
     /* header */
     /* main1 */
     .content1 {
         text-align: center;
-        font-size: xx-large;
+        font-size: larger;
         font-weight: bolder;
         position: relative;
-        left: 130px;
+        left: 0px;
     
     }
     
@@ -752,7 +752,7 @@ a {
     .main2 {
         height: 385vh;
         background-image: linear-gradient(to right top, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff);
-        width: 700px;
+        width: 427px;
     
     }
     
@@ -766,7 +766,7 @@ a {
     .sidebar1 {
         color: white;
         margin: 20px 0px;
-    width: 700px;
+        width: 427px;
         height: 220vh;
         background-color: rgb(218, 222, 241);
         border-radius: 2%;
@@ -808,10 +808,11 @@ a {
     /* slider */
     
     .containerslider {
-        width: 520px;
+        width: 350px;
+        height: 390px;
         overflow: hidden;
         position: relative;
-        left: 90px;
+        left: 30px;
         top: 30px;
         border: 5px solid black;
         background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
@@ -882,18 +883,19 @@ a {
         display: flex;
         flex-direction: column;
         align-items: center;
-        font-size: larger;
+        font-size: large;
     }
     /* location */
     .locationinfo {
-        width: 290px;
-        height: 188px;
+        font-size: 14px;
+        width: 150px;
+        height: 178px;
         border: 2px solid black;
         display: flex;
         flex-direction: column;
         align-items: center;
         position: relative;
-        right: 150px;
+        right: 90px;
         top: 20px;
         background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
         color: white;
@@ -919,16 +921,17 @@ a {
     
     
     .sportsavail {
-        width: 290px;
-        height: 185px;
+        font-size: 15px;
+        width: 160px;
+        height: 175px;
         border: 2px solid black;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         position: relative;
-        left: 175px;
-        bottom: 195px;
+        left: 98px;
+        bottom: 180px;
         background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
         color: white;
         border-radius: 4%;
@@ -976,17 +979,15 @@ a {
     
     
     .rules {
-        width: 590px;
-    
+        width: 320px;
         border: 2px solid black;
-    
         display: flex;
         flex-direction: column;
         align-items: center;
-        font-size: larger;
+        font-size: large;
         position: relative;
         bottom: 150px;
-        left: 65px;
+        left: 55px;
         background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
         color: white;
         padding: 25px 10px;
@@ -1030,7 +1031,7 @@ a {
         justify-content: center;
         position: relative;
         bottom: 120px;
-        left: 265px;
+        left: 105px;
         background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
         color: white;
         padding: 5px 10px;
@@ -1078,14 +1079,14 @@ a {
     
     
     .addplayer {
-        width: 590px;
+        width: 290px;
     
         border: 2px solid black;
     
         display: flex;
         flex-direction: column;
         align-items: center;
-        font-size: larger;
+        font-size: large;
         position: relative;
         bottom: 90px;
         left: 70px;
@@ -1106,7 +1107,7 @@ a {
     
     /* sidebar 2 */
     .booking1 {
-        width: 700px;
+        width: 425px;
         height: 170vh;
         position: relative;
         top: 1590px;
@@ -1189,12 +1190,12 @@ a {
     
     .pay {
         width: 100%;
-        height: 64px;
+        height: 44px;
         background-color: rgba(91, 173, 37, 0.906);
-        font-size: 20px;
-        font-weight: bolder;
+        font-size: 15px;
+        font-weight: bold;
     
-        padding: 10px 142px;
+        padding: 5px 14px;
     
         cursor: pointer;
         border-radius: 10px;
@@ -1207,12 +1208,12 @@ a {
     
     .paycash {
         width: 100%;
-        height: 64px;
+        height: 44px;
         background-color: rgba(91, 173, 37, 0.906);
-        font-size: 20px;
-        font-weight: bolder;
+        font-size: 15px;
+        font-weight: bold;
     
-        padding: 10px 139px;
+        padding: 5px 14px;
     
         cursor: pointer;
         border-radius: 10px;
@@ -1233,7 +1234,7 @@ a {
     /* footer */
     footer {
         height: 30vh;
-     width: 700px;
+        width: 427px;
         background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
     
         background-size: cover;
@@ -1250,7 +1251,7 @@ a {
     
     .foot-heading{
         color: rgb(219, 213, 213);
-        font-size: larger;
+        font-size: large;
         font-weight: bold;
     
     }
