--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -131,3 +131,142 @@ label {
 
 
 /* forms signin */
+@media screen and (max-width:900px) {
+    * {
+        margin: 0px;
+        padding: 0px;
+    }
+    body{
+        overflow-y: hidden;
+    }
+    /* form container */
+    #container {
+        background-image: url(../../assets/images/light.jpg);
+        height: 100vh;
+        background-position: center;
+        background-size: cover;
+    }
+    
+    .forms h1,form {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        left: 8%;
+        margin-top: 2%;
+    }
+    
+    .forms {
+        position: relative;
+        top: 13%;
+        border: 2px solid rgb(180, 176, 176);
+        width: 80%;
+        left: 10%;
+        border-radius: 2%;
+        box-shadow: 0 10px 10px rgba(215, 211, 211, 0.230);
+        height: 78%;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+    /* form container */
+    
+    
+    /* forms signin */
+    h1.signuphead {
+        color: white;
+        position: relative;
+        left: 10%;
+    
+    }
+    
+    #name1 {
+        width: 80%;
+        height: 45px;
+        border-radius: 5px;
+        border: none;
+    
+    }
+    #email {
+        width: 80%;
+        height: 45px;
+        border-radius: 5px;
+        border: none;
+    
+    }
+    
+    
+    #phoneno1 {
+        width: 80%;
+        height: 45px;
+        border-radius: 5px;
+        border: none;
+    }
+    
+    #password {
+        width: 80%;
+        height: 45px;
+        border-radius: 5px;
+        border: none;
+    
+    }
+    
+    input[type="name"]::placeholder {
+        padding-left: 5%;
+    
+    
+    }
+    
+    input[type="password"]::placeholder {
+        padding-left: 5%;
+    
+    }
+    
+    input[type="email"]::placeholder {
+        padding-left: 5%;
+    
+    
+    }
+    
+    input[type="text"]::placeholder {
+        padding-left: 5%;
+    
+    }
+    /* register button */
+    
+    #newlogin {
+        padding: 0px 50px;
+        height: 45px;
+        font-size: large;
+        font-weight: bolder;
+        cursor: pointer;
+        background-color: rgb(7, 86, 46);
+        color: white;
+        position: relative;
+        left: 18%;
+        border-radius: 10px;
+        border: none;
+        box-shadow: 0 3px 10px rgb(35, 34, 34);
+    
+    
+    }
+    #newlogin:hover{
+        background-color: rgba(15, 190, 15, 0.763);
+    
+    }
+    /* register button */
+    
+    .alert {
+        color: white;
+        position: relative;
+        left: 2%;
+    }
+    /* label color */
+    
+    label {
+        color: white;
+    
+    }
+    /* label color */
+    
+    
+    /* forms signin */
+   
+}
