--- a/assets/css/paymentpage.css
+++ b/assets/css/paymentpage.css
@@ -134,3 +134,142 @@ input[type="text"]::placeholder {
 }
 
 /* payment */
+@media screen and (max-width:900px){
+    
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+section {
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 4%, rgba(0, 212, 255, 1) 100%);
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+    background-image: url(../../assets/images/onlinepayback.jpg);
+
+}
+
+/* payment */
+.main {
+    position: relative;
+    top: 120px;
+    right: 200px;
+    padding-left: 20px;
+
+
+}
+
+.form1 {
+    width: 350px;
+    height: 700px;
+    border: 5px solid black;
+    position: relative;
+    bottom: 80px;
+  
+}
+
+.payment {
+    width: 335px;
+    height: 633px;
+
+}
+
+.content1 {
+
+    background-color: rgba(0, 0, 0, 0.5);
+    color: rgb(239, 239, 239);
+    height: 700px;
+
+}
+
+.pay1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: larger;
+}
+
+.pay2 {
+    display: flex;
+    justify-content: center;
+
+
+
+
+}
+/* month */
+#mm {
+    width: 50px;
+    position: relative;
+    right: 20px;
+}
+/* year */
+#yy {
+    width: 50px;
+    position: relative;
+    left: 20px;
+}
+/* cvc */
+.pay3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+/* upi */
+.upi {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input {
+    width: 250px;
+    height: 30px;
+}
+
+.payonline {
+    width: 290%;
+    height: 44px;
+    background-color: rgb(38, 211, 22);
+    font-size: 17px;
+    display: flex;
+    justify-content: center;
+    padding: 10px 0px;
+    cursor: pointer;
+    position: relative;
+    right: 30px;
+    font-weight: bold;
+    border-radius: 10px;
+    border: none;
+
+}
+
+a {
+    text-decoration: none;
+}
+
+input[type="name"]::placeholder {
+    padding-left: 5%;
+
+
+}
+
+input[type="text"]::placeholder {
+    padding-left: 5%;
+}
+/* or upi */
+.or {
+    font-size: 17px;
+}
+
+.goback {
+    color: white;
+    position: relative;
+    bottom: 20px;
+}
+
+/* payment */
+
+}
